[package]
name = "wasm-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0",features = ["full","derive","extra-traits"]}
quote = "1.0"
wasm-core = {path = "../wasm-core"}
proc-macro2 = "1.0.24"
nom = "7"